# lab_ppois

./: .gitignore
lab1_ppois/lab1_ppois/: CMakeLists.txt
lab1_ppois/lab1_ppois/include/bigint/: BigInt.hpp
lab1_ppois/lab1_ppois/include/dictionary/: Dictionary.hpp  DictionaryNode.hpp
lab1_ppois/lab1_ppois/include/utils/: StringUtils.hpp
lab1_ppois/lab1_ppois/src/: main.cpp
lab1_ppois/lab1_ppois/src/bigint/: BigInt.cpp
lab1_ppois/lab1_ppois/src/dictionary/: Dictionary.cpp  DictionaryNode.cpp
lab1_ppois/lab1_ppois/src/utils/: StringUtils.cpp
lab1_ppois/lab1_ppois/tests/: main_test.cpp  test_biginit.cpp  test_bigint.cpp  test_dictionary.cpp  test_string_utils.cpp
lab2_ppois/lab1_minimarket/: CMakeLists.txt
lab2_ppois/lab1_minimarket/include/banking/: ATM.hpp  Account.hpp  AuditTrail.hpp  Balance.hpp  Bank.hpp  BankStatement.hpp  BankTransfer.hpp  BankingSystem.hpp  Branch.hpp  Card.hpp  CreditCard.hpp  CreditScore.hpp  CurrencyConverter.hpp  CustomerService.hpp  FraudDetector.hpp  InterestCalculator.hpp  InvestmentAccount.hpp  Loan.hpp  Mortgage.hpp  NotificationService.hpp  PaymentProcessor.hpp  ReportGenerator.hpp  RiskAssessor.hpp  SecuritySystem.hpp  TaxCalculator.hpp  Transaction.hpp
lab2_ppois/lab1_minimarket/include/orders/: Order.hpp  OrderItem.hpp  OrderSystem.hpp  Payment.hpp  Shipping.hpp  ShoppingCart.hpp
lab2_ppois/lab1_minimarket/include/products/: BarcodeSystem.hpp  Category.hpp  DiscountSystem.hpp  Inventory.hpp  PricingStrategy.hpp  Product.hpp  ProductManagement.hpp  ProductReview.hpp  ProductSpecification.hpp  Supplier.hpp  Warehouse.hpp
lab2_ppois/lab1_minimarket/include/users/: Address.hpp  Admin.hpp  ContactInfo.hpp  Customer.hpp  Employee.hpp  LoginCredentials.hpp  User.hpp  UserPreferences.hpp  UserProfile.hpp  UserSession.hpp  UserSystem.hpp
lab2_ppois/lab1_minimarket/include/utils/: Exceptions.hpp
lab2_ppois/lab1_minimarket/src/: main.cpp
lab2_ppois/lab1_minimarket/src/banking/: ATM.cpp  Account.cpp  AuditTrail.cpp  Balance.cpp  Bank.cpp  BankStatement.cpp  BankTransfer.cpp  BankingSystem.cpp  Branch.cpp  Card.cpp  CreditCard.cpp  CreditScore.cpp  CurrencyConverter.cpp  CustomerService.cpp  FraudDetector.cpp  InterestCalculator.cpp  InvestmentAccount.cpp  Loan.cpp  Mortgage.cpp  NotificationService.cpp  PaymentProcessor.cpp  ReportGenerator.cpp  RiskAssessor.cpp  SecuritySystem.cpp  TaxCalculator.cpp  Transaction.cpp
lab2_ppois/lab1_minimarket/src/orders/: Order.cpp  OrderItem.cpp  OrderSystem.cpp  Payment.cpp  Shipping.cpp  ShoppingCart.cpp
lab2_ppois/lab1_minimarket/src/products/: BarcodeSystem.cpp  Category.cpp  DiscountSystem.cpp  Inventory.cpp  PricingStrategy.cpp  Product.cpp  ProductManagement.cpp  ProductReview.cpp  ProductSpecification.cpp  Supplier.cpp  Warehouse.cpp
lab2_ppois/lab1_minimarket/src/users/: Address.cpp  Admin.cpp  ContactInfo.cpp  Customer.cpp  Employee.cpp  LoginCredentials.cpp  User.cpp  UserPreferences.cpp  UserProfile.cpp  UserSession.cpp  UserSystem.cpp
lab2_ppois/lab1_minimarket/tests/: main_test.cpp  test_banking.cpp  test_orders.cpp  test_products.cpp  test_users.cpp
